<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtContraseña"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="logo"
        android:src="@drawable/logo_metalcof"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/btnResgistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/btnResgistrar"
        android:textColor="@color/blanco"
        android:textColorHighlight="@color/negro"
        android:textColorLink="@color/negro"
        android:textStyle="bold"
        app:iconTint="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtDocumento"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtDireccion"
        android:inputType="textPostalAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/txtCiudad"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtCiudad"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtTelefono"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_registro"
        android:ems="10"
        android:hint="@string/txtContrasena"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/blanco"
        android:textColorHint="@color/aguamarina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.567" />

</androidx.constraintlayout.widget.ConstraintLayout>