<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".CatalogoActivity">

    <TextView
        android:id="@+id/txtCatalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text="@string/txtCatalogo"
        android:textColor="@color/blanco"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEstufas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtEstufas"
        android:textColor="@color/blanco"
        android:textSize="13dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/catalogo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/catalogo_baraya" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitulo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txtTitulo1"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/chasis_elaborado_con_angulo_de_3_4_x_1_8_y_tubo_cuadrado_50_x_50_mm_forrado_en_l_mina_cr_18_con_2_rec_maras_de_combusti_n_rectangular_rodeada_de_adoquines_paredes_recubiertas_con_mortero_cer_mico_refractario_sistema_de_doble_pared_interna_para_aislamiento_de_calor_por_ceniza_buitr_n_de_244_9_9_cm_elaborado_en_l_mina_calibre_22_parrilla_inferior_portale_a_con_gabinetes_remarco_distanciador_perimetral"
                    android:textSize="9sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/Precio1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtPrecio1"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="5dp"
                        android:text="$8.000.000"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.037" />

                    <Button
                        android:id="@+id/btnCarrito1"
                        android:layout_width="29dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/botonmenu"
                        android:drawableLeft="@drawable/carrito_compras"
                        android:padding="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.072"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtPrecio1"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/catalogo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/catalogo_palermo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitulo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txtTitulo2"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/chasis_elaborado_con_angulo_de_3_4_x_1_8_y_tubo_cuadrado_50_x_50_mm_forrado_en_l_mina_cr_18_con_rec_mara_de_combusti_n_rectangular_rodeada_de_mortero_cer_mico_refractario_y_adoquines_buitr_n_de_244_9_9_cm_elaborado_en_l_mina_galvanizada_calibre_22_sistema_de_doble_pared_interna_para_aislamiento_de_calor_por_ceniza_parrilla_inferior_portale_a_con_gabinetes_remarco_distanciador"
                    android:textSize="9dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/precio2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtPrecio2"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="5dp"
                        android:text="$4.500.000"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.037" />

                    <Button
                        android:id="@+id/btnCarritoCompras2"
                        android:layout_width="29dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/botonmenu"
                        android:drawableLeft="@drawable/carrito_compras"
                        android:padding="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.072"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtPrecio2"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/catalogo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/catalogo_pmixta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitulo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txtTitulo3"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/chasis_elaborado_con_angulo_de_3_4_x_1_8_y_tubo_cuadrado_50_x_50_mm_forrado_en_l_mina_cr_18_con_rec_mara_de_combusti_n_rectangular_rodeada_de_mortero_cer_mico_refractario_y_adoquines_buitr_n_de_244_9_9_cm_elaborado_en_l_mina_galvanizada_calibre_22_sistema_de_doble_pared_interna_para_aislamiento_de_calor_por_ceniza_parrilla_inferior_portale_a_con_gabinetes_remarco_distanciador"
                    android:textSize="9dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/precio3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtPrecio3"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="5dp"
                        android:text="$5.500.000"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.037" />

                    <Button
                        android:id="@+id/btnCarritoCompras3"
                        android:layout_width="29dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/botonmenu"
                        android:drawableLeft="@drawable/carrito_compras"
                        android:padding="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.072"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtPrecio3"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/catalogo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:src="@drawable/catalogo_teruel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitulo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txtTitulo4"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescripcion4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/chasis_elaborado_con_angulo_de_3_4_x_1_8_y_tubo_cuadrado_50_x_50_mm_forrado_en_l_mina_cr_18_con_rec_mara_de_combusti_n_rectangular_rodeada_de_mortero_cer_mico_refractario_y_adoquines_buitr_n_de_244_9_9_cm_elaborado_en_l_mina_galvanizada_calibre_22_sistema_de_doble_pared_interna_para_aislamiento_de_calor_por_ceniza_parrilla_inferior_portale_a_remarco_distanciador_perimetral"
                    android:textSize="9dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/precio4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/txtPrecio4"
                        android:layout_width="261dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="5dp"
                        android:text="$7.000.000"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.037" />

                    <Button
                        android:id="@+id/btnCarritoCompras4"
                        android:layout_width="29dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/botonmenu"
                        android:drawableLeft="@drawable/carrito_compras"
                        android:padding="6dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.072"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtPrecio4"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>